0.3.3 ( rXXXX )
---------------

Created a new option (-d,--cachedir) to specify a cache directory for
the caching system.  This is used by Grails.  Gant release rushed out
for the Grails 1.1 release.


0.3.2 (r8191)
-------------

Fixed problem with -V option.
Started a Maven 2 build capability -- this is work in progress on not complete.
Restructured source to fit better with the Maven 2 directory structure.
Corrected various problems with return values.
Changed the location of the repository to http://svn.codehaus.org/groovy/gant

0.3.1 (r6962)
-------------

Added returning a sensible return code -- 0 for success and 1 for failure.

Added extending of the classpath:
      --lib <path> for individual jars.
      Searching ~/.ant/lib for user collections of jar files.
      Searching ANT_HOME/lib for jar files if ANT_HOME is defined.

0.3.0 (r6320)
-------------

Works with both Groovy 1.0 release and the Groovy 1.1-beta-1 release.
Changed from using `task' to using `target' as the string introducing a target.
Added a Maven project processing tool.
Added a mechanism for accessing the documentation string of a target.
Improved the error reporting.


0.2.4 (r5374)
-------------

Use System.properties.'file.separator' instead of / so things work on Windows.
Added the ability to have multiple -D options so as to be able to define any number of variables/properties
on the command line.
Added specialized Grails build infrastructure.
Implemented local caching of .class files to improve performance when executing scripts. This is an optional
feature (disabled by default) and is enabled using the -c option of gant.
Added the a LaTeX processing tool.

0.2.3 (r4761)
-------------

Updated to use and work with Groovy 1.0 release.


0.2.2 (r4329)
-------------

Licence changed from LGPL to ASL 2.0.
Updated to use and work with Groovy 1.0 RC-1.
Added gant.tool.Execute, works on Linux, Solaris and Mac OS X, not tested on Windows.
Tidies up code and removed redundant bits.